# SkyproBetaHomework_Poetry

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/: decorators.py  generators.py  processing.py  utils.py  widget.py
src/masks/: account.py  card.py  datedime.py
src/utils/: json_parser.py  transaction_parser.py
tests/: test_decorators.py  test_generators.py  test_json_parser.py  test_processing.py  test_transaction_parser.py  test_utils.py  test_widget.py
