[tool.poetry]
name = "lesson"
version = "0.1.0"
description = ""
authors = ["Vladislav Vasilev <akiro_jpg@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.10.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
isort = "^5.12.0"

[tool.flake8]
line-length = 119

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
